--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="info">
                 <h1>Olá, Sou Luis Augusto (Luis Das Artimanhas)</h1>
                 <p>Um desenvolvedor Full Stack apaixonado por tecnologia.</p>
-                <p>Estou sempre me desafiando com novos projetos e buscando feedback na comunidade de programação, além de compartilhar meus conhecimentos. 😁</p>
+                <p>Estou sempre me desafiando com novos projetos e buscando feedback na comunidade de programação, além de compartilhar meus conhecimentos e sempre aprendendo mais coisas novas a cada dia! 😁</p>
                 <p>Ah, também sou fã de jogos, filmes, séries e animes. 💜</p>
 
                 <ul class="redes-sociais">
