--- a/index.html
+++ b/index.html
@@ -141,6 +141,18 @@
                         </div>
                     </a>
                 </div>
+
+                <div class="projeto">
+                    <a href="https://github.com/" target="_blank">
+                        <img
+                        src="https://via.placeholder.com/515X700" alt="Projeto landing page Mario">
+                        <h3>Projeto Landing Page Mario</h3>
+                        <div class="informacoes-projeto">
+                        <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                        <p>🔗 Ver no GitHub Pages</p>
+                        </div>
+                    </a>
+                </div>
             </div>
 
             <button class="btn-mostrar-projetos">
