--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"/>
 
-    <link rel="stylesheet" href="./src/css/style.css">
-    <!-- <link rel="stylesheet" href="./src/css/responsivo.css"> -->
     <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
     <seo>
     <meta
     name="description"
@@ -147,7 +147,7 @@
                         <img
                         src="https://via.placeholder.com/515X700" alt="Projeto landing page Mario">
                         <h3>Projeto Landing Page Mario</h3>
-                        <div class="informacoes-projeto">
+                        <div class="info-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
                         <p>🔗 Ver no GitHub Pages</p>
                         </div>
