--- a/index.html
+++ b/index.html
@@ -95,49 +95,61 @@
 
             <div class="container-projetos">
                 <div class="projeto ativo">
-                    <a href="https://github.com/" target="_blank">
-                        <img src="./src/img/projeto-gta.png" alt="Projeto Landing page GTA">
-                        <h3>Projeto GTA</h3>
+                    <a href="https://github.com/LUISDASARTIMANHAS/IFES-SISTEMAS-DE-INFORMACAO" target="_blank">
+                        <img src="./src/img/ifes-logo.png" alt="Projeto IFES SISTEMAS DE INFORMACAO">
+                        <h3>IFES SISTEMAS DE INFORMAÇÃO</h3>
 
                         <div class="info-projeto">
-                            <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                            <p>Projeto feito com varias tecnologias para representar o aprendizado na faculdade IFES/SI TURMA V6</p>
                             <p>🔗 Ver no GitHub Pages</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="projeto ativo">
-                    <a href="https://github.com/" target="_blank">
-                        <img src="./src/img/projeto-listagem-pokemon.png" alt="Projeto Landing page listagem pokemon">
+                    <a href="https://github.com/LUISDASARTIMANHAS/template-server-express-node-js" target="_blank">
+                        <img src="./src/img/express-node-js-icon.jpg" alt="Este e um template de um servidor web node.js, ele tem um sistema de hosteamento dinâmico na rota /host que salva os arquivos e o caminho do usuario na pasta uploads e no banco de dados /data/host.json">
                         <h3>Projeto listagem pokemon</h3>
 
                         <div class="info-projeto">
-                            <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                            <p>Este e um template de um servidor web node.js, ele tem um sistema de hosteamento dinâmico na rota /host que salva os arquivos e o caminho do usuario na pasta uploads e no banco de dados /data/host.json</p>
                             <p>🔗 Ver no GitHub Pages</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="projeto ativo">
-                    <a href="https://github.com/" target="_blank">
-                        <img src="./src/img/projeto-one-piece.png" alt="Projeto Landing page One Piece">
-                        <h3>Projeto One Piece</h3>
+                    <a href="https://github.com/LUISDASARTIMANHAS/SASS-PROJECT" target="_blank">
+                        <img src="./src/img/sass-logo.png" alt="SASS PROJECT, Um projeto de exemplo, template e experiência, para aprendizagem">
+                        <h3>SASS PROJECT</h3>
 
                         <div class="info-projeto">
-                            <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                            <p>SASS PROJECT, Um projeto de exemplo, template e experiência, para aprendizagem</p>
                             <p>🔗 Ver no GitHub Pages</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="projeto ativo">
-                    <a href="https://github.com/" target="_blank">
-                        <img src="./src/img/projeto-x-men.png" alt="Projeto Landing page X-Men">
-                        <h3>Projeto X-Men</h3>
+                    <a href="https://github.com/LUISDASARTIMANHAS/Mario-Jump-Game" target="_blank">
+                        <img src="./src/img/mario.gif" alt="Mario Jump Game e um jogo plataforma desenvolvido com base no original mas versão navegador">
+                        <h3>Mario Jump Game</h3>
 
                         <div class="info-projeto">
-                            <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                            <p>Mario Jump Game e um jogo plataforma desenvolvido com base no original mas versão navegador</p>
                             <p>🔗 Ver no GitHub Pages</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://github.com/LUISDASARTIMANHAS/All-The-Mods-Translated-BR-Factorio-version" target="_blank">
+                        <img
+                        src="./src/img/factorio-thumbnail.png" alt="Projeto landing page Mario">
+                        <h3>All-The-Mods-Translated-BR (FACTORIO THE GAME)</h3>
+                        <div class="info-projeto">
+                        <p>Mod do jogo Factorio que tem como objetivo traduzir todos os mods, inspirado no ATM (mas não afiliado ao mod).</p>
+                        <p>🔗 Ver no GitHub Pages</p>
                         </div>
                     </a>
                 </div>
@@ -153,6 +165,7 @@
                         </div>
                     </a>
                 </div>
+
             </div>
 
             <button class="btn-mostrar-projetos">
