--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="projeto ativo">
                     <a href="https://github.com/LUISDASARTIMANHAS/template-server-express-node-js" target="_blank">
                         <img src="./src/img/express-node-js-icon.jpg" alt="Este e um template de um servidor web node.js, ele tem um sistema de hosteamento dinâmico na rota /host que salva os arquivos e o caminho do usuario na pasta uploads e no banco de dados /data/host.json">
-                        <h3>Projeto listagem pokemon</h3>
+                        <h3>template server express, node js</h3>
 
                         <div class="info-projeto">
                             <p>Este e um template de um servidor web node.js, ele tem um sistema de hosteamento dinâmico na rota /host que salva os arquivos e o caminho do usuario na pasta uploads e no banco de dados /data/host.json</p>
